--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,53 @@
+/******************/
+/* Global Styling */
+/******************/
+
 html {
     scroll-behavior: smooth;
+}
+
+body {
+    position: relative;
+    /*background-color: #2248d3; */
+}
+
+.floating-bg {
+    display: none;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+    object-fit: cover;
+    opacity: 0.6;
+    z-index: -1;
+    filter: invert(39%) sepia(54%) saturate(830%) hue-rotate(191deg) brightness(100%) contrast(97%);
+    background: url("/images/grid-transparent.png") repeat;
+    background-size: 600px;
+}
+
+main {
+    color: #3a3a3a;
+    font-family: 'Montserrat', serif;
+}
+
+/****************************/
+/* Project Overview Styling */
+/****************************/
+
+main #project-overview section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    width: 100%;
+}
+
+main #project-overview section text {
+    width: 50%;
+    padding: 2em;
+}
+
+main #project-overview section img {
+    margin: auto;
 }
