--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 header {
     --nav-height: 80px;
-    --nav-height-expanded: 110px;
-    --nav-background: #711717eb;
+    --nav-height-expanded: 120px;
+    --nav-background: #840909d1;
     --nav-item-filter: invert(93%) sepia(35%) saturate(801%) hue-rotate(292deg) brightness(103%) contrast(101%); 
     --nav-item-filter-hover: invert(81%) sepia(12%) saturate(719%) hue-rotate(204deg) brightness(93%) contrast(91%);;
 
@@ -21,6 +21,7 @@ header .sticky-nav-container {
     width: 100%;
     background-color: var(--nav-background);
     transition: ease 0.5s;
+    backdrop-filter: blur(3px);
 }
 
 header .sticky-nav-container:hover {
@@ -31,7 +32,7 @@ header .sticky-nav {
     margin: auto;
     width: 100%;
     height: 100%;
-    max-width: 1300px;
+    max-width: 1400px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
