--- a/css/main.css
+++ b/css/main.css
@@ -73,10 +73,16 @@ main .template-wrapper section.reverse {
     }
 }
 
+@media (max-width: 800px) {
+    main .template-wrapper section {
+        flex-direction: column;
+    }
+}
+
 /* Text */
 main .template-wrapper section text {
     width: 50%;
-    padding: 2em;
+    padding: 1em;
 }
 
 main .template-wrapper section text.valign {
@@ -87,6 +93,12 @@ main .template-wrapper section text.alone {
     width: calc(100% - 10px);
     margin: auto;
     text-align: center;
+}
+
+@media (max-width: 800px) {
+    main .template-wrapper section text {
+        width: 100%;
+    }
 }
 
 /* Heading */
@@ -137,6 +149,12 @@ main .template-wrapper section img.ball2 {
 
 main .template-wrapper section img.full-span {
     width: 100%;
+}
+
+@media (max-width: 800px) {
+    main .template-wrapper section img {
+        width: 90% !important;
+    }
 }
 
 /* Video */
@@ -200,4 +218,30 @@ main .author img {
     height: 50px;
     border-radius: 400px;
     border: 1px solid var(--nav-background);
+}
+
+@media (max-width: 800px) {
+    main .author {
+        max-width: 65px;
+        max-height: 65px;
+        padding: 8px;
+        overflow: hidden;
+        transition: 0.3s ease;
+    }
+
+    main .author:hover {
+        max-width: 100%;
+        padding: 8px;
+        overflow: hidden;
+    }
+
+    main .author text h1,
+    main .author text h2,
+    main .author text h3,
+    main .author text h4 {
+        max-width: 300px;
+        max-height: 1em;
+        width: auto;
+    
+    }
 }
