--- a/css/main.css
+++ b/css/main.css
@@ -74,15 +74,22 @@ main .template-wrapper section.reverse {
 }
 
 @media (max-width: 800px) {
-    main .template-wrapper section {
+    main .template-wrapper section,
+    main .template-wrapper section.reverse {
         flex-direction: column;
+    }
+
+    main .template-wrapper.meet-the-team section {
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
     }
 }
 
 /* Text */
 main .template-wrapper section text {
     width: 50%;
-    padding: 1em;
+    padding: 0.5em;
 }
 
 main .template-wrapper section text.valign {
@@ -155,6 +162,11 @@ main .template-wrapper section img.full-span {
     main .template-wrapper section img {
         width: 90% !important;
     }
+
+    main .template-wrapper section img.ball,
+    main .template-wrapper section img.ball2 {
+        width: 60% !important;
+    }
 }
 
 /* Video */
@@ -175,11 +187,27 @@ main .template-wrapper section table {
 main .template-wrapper section table tr th,
 main .template-wrapper section table tr td {
     border: none;
-    padding: 5px 20px;
+    padding: 5px 10px;
 }
 
 main .template-wrapper section table tr:nth-child(even) {
     background-color: #c4c4c442;
+}
+
+@media (max-width: 800px) {
+    main .template-wrapper section table {
+    }
+    main .template-wrapper section table tr th,
+    main .template-wrapper section table tr td {
+        border: none;
+        padding: 1px;
+    }
+    main .template-wrapper section table tr th,
+    main .template-wrapper section table tr td,
+    main .template-wrapper section table tr th p,
+    main .template-wrapper section table tr td p {
+        font-size: calc(12px + (20 - 12) * ((100vw - 320px) / (1900 - 320)));
+    }
 }
 
 /* Author */
@@ -208,10 +236,7 @@ main .author text h2,
 main .author text h3,
 main .author text h4 {
     margin: 0 10px;
-
 }
-
-
 
 main .author img {
     width: 50px;
@@ -242,6 +267,5 @@ main .author img {
         max-width: 300px;
         max-height: 1em;
         width: auto;
-    
     }
 }
