--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,7 @@
 header {
     --nav-height: 60px;
     --nav-height: 80px;
-    --nav-height-expanded: 120px;
+    --nav-height-expanded: 130px;
     --nav-background: #840909d1;
     --nav-item-filter: invert(93%) sepia(35%) saturate(801%) hue-rotate(292deg) brightness(103%) contrast(101%); 
     --nav-item-filter-hover: invert(81%) sepia(12%) saturate(719%) hue-rotate(204deg) brightness(93%) contrast(91%);;
@@ -38,6 +38,7 @@ header .sticky-nav {
     flex-direction: row;
     justify-content: space-evenly;
     align-items: space-evenly;
+    overflow: hidden;
 }
 
 header .sticky-nav a {
@@ -51,6 +52,7 @@ header .sticky-nav a {
     justify-content: flex-start;
     font-family: 'Krub', serif;
     font-weight: 600;
+    height: var(--nav-height-expanded);
 }
 
 header .sticky-nav a.hamburger {
@@ -67,6 +69,7 @@ header .sticky-nav-container .sticky-nav a span {
 
 header .sticky-nav-container:hover .sticky-nav a span { 
     visibility:visible;
+    margin: auto;
 }
 
 header .sticky-nav a img {
